add atractions city page

--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -61,4 +61,12 @@
 @import "./components/attractions/attractions-types";
 @import "./components/attractions/attractions-sanatorium";
 @import "./components/attractions/attractions-excursion";
+@import "./components/attractions/attractions-information";
 @import "./components/attractions/attractions-map";
+@import "./components/attractions/attractions-sidebar";
+
+@import "./components/attractions-city/attractions-city-hero";
+@import "./components/attractions-city/attractions-city-main";
+@import "./components/attractions-city/attractions-city-about";
+@import "./components/attractions-city/attractions-city-content";
+@import "./components/attractions-city/attractions-city-hotel";
