--- a/src/assets/styles/base/variables.scss
+++ b/src/assets/styles/base/variables.scss
@@ -27,6 +27,7 @@ $black-300: #474F5A;
 $black-400: #263141;
 $black-500: #263238;
 $black-600: #0D192B;
+$black-700: #0D192B;
 
 $cyan-400: #10A2EC;
 
