--- a/src/views/pages/reviews-two.pug
+++ b/src/views/pages/reviews-two.pug
@@ -19,7 +19,8 @@ block content
           href: '/about',
           title: 'О нас',
         },
-      ]
+      ],
+      'О нас',
     )
     include ../components/reviews/reviews-hero
     include ../components/reviews/reviews-clients-two
