--- a/src/views/mixins/breadcrumbs.pug
+++ b/src/views/mixins/breadcrumbs.pug
@@ -1,20 +1,22 @@
-mixin breadcrumbs(data)
+mixin breadcrumbs(data, back)
   .breadcrumbs.reveal-showed-up
     .wrapper
       ul.breadcrumbs__list
         li 
           a(href="/") Главная
+        svg(width="16" height="16" viewBox="0 0 16 16")
+          use(xlink:href="#svg-chevron-right")
         for link in data
           if link.href == ''
-            svg(width="16" height="16" viewBox="0 0 16 16")
-              use(xlink:href="#svg-chevron-right")
             li= link.title
             svg(width="16" height="16" viewBox="0 0 16 16")
               use(xlink:href="#svg-chevron-right")
-          else 
-            svg(width="16" height="16" viewBox="0 0 16 16")
-              use(xlink:href="#svg-chevron-right")
+          else
             li
               a(href=""+link.href)= link.title
             svg(width="16" height="16" viewBox="0 0 16 16")
               use(xlink:href="#svg-chevron-right")
+      ul.breadcrumbs__button
+        svg(width="16" height="16" viewBox="0 0 16 16")
+          use(xlink:href="#svg-chevron-right")
+        a(href="#")= back
