--- a/src/views/components/attractions-city/attractions-city-hotel.pug
+++ b/src/views/components/attractions-city/attractions-city-hotel.pug
@@ -13,5 +13,6 @@
       a.attractions-city-hotel__item(href="#") Отели с парковкой
       a.attractions-city-hotel__item(href="#") Отели с рестораном
       a.attractions-city-hotel__item(href="#") Отели для отдыха с детьми
-    +button-transparent('Все отели', '#')
+    .attractions-city-hotel__buttons
+      +button-transparent('Все отели', '#')
     
