--- a/src/views/components/attractions-city/attractions-city-main.pug
+++ b/src/views/components/attractions-city/attractions-city-main.pug
@@ -6,5 +6,20 @@
         include ../attractions/attractions-information
         include ../attractions-city/attractions-city-content
         include ../attractions-city/attractions-city-hotel
+        include ../attractions-city/attractions-city-content-2
+        +attractions-sanatorium(
+          {
+            title: 'Санатории в Рязани',
+            className: '',
+            sliderName: 'attractions-sanatorium__slider--three'
+          }
+        )
+        include ../attractions-city/attractions-city-content-3
+        include ../attractions/attractions-excursion
+        include ../attractions-city/attractions-city-content-4
+        include ../attractions-city/attractions-city-content-5
+        include ../attractions-city/attractions-city-content-6
+        include ../attractions-city/attractions-city-content-7
+        include ../attractions-city/attractions-city-content-8
       .attractions-city-main__sidebar
         include ../attractions/attractions-sidebar
