--- a/src/views/components/attractions/attractions-sidebar.pug
+++ b/src/views/components/attractions/attractions-sidebar.pug
@@ -1,36 +1,34 @@
-aside.attractions-sidebar
-  .attractions-sidebar__blocks
-    .attractions-sidebar__block.attractions-sidebar__block--orange
-      .attractions-sidebar__title
-        svg(width="18" height="18" viewBox="0 0 18 18")
-          use(xlink:href="#svg-direction")
-        h3 Экскурсии
-      .attractions-sidebar__types
-        .attractions-sidebar__type
-          span По достопримечательности:
-          a(href="#") 58 экскурсий
-        .attractions-sidebar__type
-          span По достопримечательности:
-          a(href="#") 58 экскурсий
-    .attractions-sidebar__block
-      h4 Содержание:
-      .attractions-sidebar__main
-        .attractions-sidebar__links
-          a.attractions-sidebar__link.attractions-sidebar__link--bold(href="#") История
-          a.attractions-sidebar__link(href="#") Пожары и новые строительства
-        .attractions-sidebar__links
-          a.attractions-sidebar__link.attractions-sidebar__link--bold(href="#") Архитектура
-          a.attractions-sidebar__link(href="#") Реставрация
-        .attractions-sidebar__links
-          a.attractions-sidebar__link.attractions-sidebar__link--bold(href="#") Залы и сцены Большого театра
-          a.attractions-sidebar__link(href="#") Главное фойе
-          a.attractions-sidebar__link(href="#") Историческая сцена
-          a.attractions-sidebar__link(href="#") Бетховенский зал
-          a.attractions-sidebar__link(href="#") Императорское фойе
-          a.attractions-sidebar__link(href="#") Новая сцена
-        a.attractions-sidebar__link.attractions-sidebar__link--bold(href="#") Музей Большого театра
-        a.attractions-sidebar__link.attractions-sidebar__link--bold(href="#") Репертуар Большого театра
-        a.attractions-sidebar__link.attractions-sidebar__link--bold(href="#") Видеообзор
-        a.attractions-sidebar__link.attractions-sidebar__link--bold(href="#") Панорама 360°
-        a.attractions-sidebar__link.attractions-sidebar__link--bold(href="#") Как добраться
+aside.attractions-sidebar__block.attractions-sidebar__block--orange
+  .attractions-sidebar__title
+    svg(width="18" height="18" viewBox="0 0 18 18")
+      use(xlink:href="#svg-direction")
+    h3 Экскурсии
+  .attractions-sidebar__types
+    .attractions-sidebar__type
+      span По достопримечательности:
+      a(href="#") 58 экскурсий
+    .attractions-sidebar__type
+      span По городу:
+      a(href="#") 4 экскурсии
+aside.attractions-sidebar__block
+  h4 Содержание:
+  .attractions-sidebar__main
+      .attractions-sidebar__links
+        a.attractions-sidebar__link.attractions-sidebar__link--bold(href="#") История
+        a.attractions-sidebar__link(href="#") Пожары и новые строительства
+      .attractions-sidebar__links
+        a.attractions-sidebar__link.attractions-sidebar__link--bold(href="#") Архитектура
+        a.attractions-sidebar__link(href="#") Реставрация
+      .attractions-sidebar__links
+        a.attractions-sidebar__link.attractions-sidebar__link--bold(href="#") Залы и сцены Большого театра
+        a.attractions-sidebar__link(href="#") Главное фойе
+        a.attractions-sidebar__link(href="#") Историческая сцена
+        a.attractions-sidebar__link(href="#") Бетховенский зал
+        a.attractions-sidebar__link(href="#") Императорское фойе
+        a.attractions-sidebar__link(href="#") Новая сцена
+      a.attractions-sidebar__link.attractions-sidebar__link--bold(href="#") Музей Большого театра
+      a.attractions-sidebar__link.attractions-sidebar__link--bold(href="#") Репертуар Большого театра
+      a.attractions-sidebar__link.attractions-sidebar__link--bold(href="#") Видеообзор
+      a.attractions-sidebar__link.attractions-sidebar__link--bold(href="#") Панорама 360°
+      a.attractions-sidebar__link.attractions-sidebar__link--bold(href="#") Как добраться
 
