--- a/src/views/layouts/master.pug
+++ b/src/views/layouts/master.pug
@@ -96,6 +96,7 @@ html(lang="ru")
     include ../mixins/reviews-clients-card-two
     include ../mixins/attractions-types-card
     include ../mixins/excursion-card
+    include ../mixins/attractions-sanatorium
 
     include ../components/header
 
