--- a/src/views/pages/attractions-city.pug
+++ b/src/views/pages/attractions-city.pug
@@ -32,3 +32,4 @@ block content
     )
     include ../components/attractions-city/attractions-city-hero
     include ../components/attractions-city/attractions-city-main
+    include ../components/attractions-city/attractions-city-types
