--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -70,3 +70,4 @@
 @import "./components/attractions-city/attractions-city-about";
 @import "./components/attractions-city/attractions-city-content";
 @import "./components/attractions-city/attractions-city-hotel";
+@import "./components/attractions-city/attractions-city-types";
