--- a/src/assets/styles/components/attractions-city/attractions-city-content.scss
+++ b/src/assets/styles/components/attractions-city/attractions-city-content.scss
@@ -1,4 +1,5 @@
 .attractions-city-content {
+  margin: 30px 0;
   h2 {
     padding-bottom: 30px;
   }
@@ -8,6 +9,7 @@
     font-weight: 600;
     line-height: 24px;
     padding-bottom: 24px;
+    margin-top: 40px;
   }
   &__text {
     padding-right: 20px;
@@ -19,6 +21,10 @@
       font-weight: 400;
       line-height: 24px;
       color: $black-300;
+    }
+    span {
+      color: $black-400;
+      font-weight: 600;
     }
   }
 
@@ -42,4 +48,38 @@
     color: rgba($color: $black-300, $alpha: 0.75);
   }
 
+  &__video {
+    margin-top: 40px;
+    height: 400px;
+    iframe {
+      height: 100%;
+      width: 100%;
+    }
+  }
+
+  &__link {
+    margin-top: 40px;
+    display: inline-block;
+    font-size: 16px;
+    line-height: 16px;
+    color: $gray-400;
+    border-bottom: 1px dashed rgba($color: $gray-400, $alpha: 0.5);
+  }
+
+  .ymap-container {
+    width: 100%;
+    height: 400px;
+    @include max-screen(tablet) {
+      margin-top: 20px;
+      margin-bottom: 30px;
+    }
+    @include min-screen(tablet-2x) {
+      margin-top: 40px;
+      margin-bottom: 40px;
+    }
+    #map-yandex {
+      height: 100%;
+      width: 100%;
+    }
+  }
 }
