--- a/src/assets/styles/components/attractions-city/attractions-city-main.scss
+++ b/src/assets/styles/components/attractions-city/attractions-city-main.scss
@@ -1,7 +1,33 @@
 .attractions-city-main {
+  padding-bottom: 30px;
+  position: relative;
+  &:before {
+    position: absolute;
+    z-index: -1;
+    content: '';
+    top: 50px;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: $bg-blue;
+    height: calc(100% - 50px);
+    width: 100%;
+  }
   &__wrapper {
     display: grid;
     gap: 24px;
     grid-template-columns: 1fr 306px;
+  }
+  .attractions-sanatorium,
+  .attractions-excursion {
+    @include min-screen(tablet-2x) {
+      padding: 60px 0;
+    }
+  }
+
+  &__sidebar {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
   }
 }
