--- a/src/assets/styles/components/attractions/attractions-sidebar.scss
+++ b/src/assets/styles/components/attractions/attractions-sidebar.scss
@@ -1,17 +1,15 @@
 .attractions-sidebar {
-  &__blocks {
-    display: flex;
-    flex-direction: column;
-    gap: 24px;
-  }
-
   &__block {
+    position: sticky;
+    top: 20px;
     background-color: $white;
     border-radius: 10px;
     box-shadow: 0px 4px 25px 0px rgba($color: $black-700, $alpha: 0.12);
     padding: 30px;
     border: 2px solid transparent;
     &--orange {
+      position: relative;
+      top: auto;
       border-color: rgba($color: $orange-500, $alpha: 0.5);
     }
     h3 {
