--- a/src/views/components/attractions-city/attractions-city-hero.pug
+++ b/src/views/components/attractions-city/attractions-city-hero.pug
@@ -1,4 +1,4 @@
-section.attractions-city-hero
+section.attractions-city-hero#attractions-city-hero
   .wrapper
     .attractions-city-hero__wrapper
       h1.attractions-city-hero__title Рязанский областной театр драмы
