update attractions city

--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -64,6 +64,7 @@
 @import "./components/attractions/attractions-information";
 @import "./components/attractions/attractions-map";
 @import "./components/attractions/attractions-sidebar";
+@import "./components/attractions/attractions-button";
 
 @import "./components/attractions-city/attractions-city-hero";
 @import "./components/attractions-city/attractions-city-main";
