--- a/src/views/layouts/master.pug
+++ b/src/views/layouts/master.pug
@@ -97,6 +97,7 @@ html(lang="ru")
     include ../mixins/attractions-types-card
     include ../mixins/excursion-card
     include ../mixins/attractions-sanatorium
+    include ../mixins/attractions-excursion
 
     include ../components/header
 
