--- a/src/views/pages/attractions-city.pug
+++ b/src/views/pages/attractions-city.pug
@@ -28,8 +28,10 @@ block content
           title: 'Достопримечательности Рязани',
         },
       ],
-      'Назад'
+      'Назад',
+      'breadcrumbs__button-white'
     )
     include ../components/attractions-city/attractions-city-hero
     include ../components/attractions-city/attractions-city-main
     include ../components/attractions-city/attractions-city-types
+    include ../components/attractions/attractions-button
