--- a/src/assets/styles/components/attractions-city/attractions-city-hero.scss
+++ b/src/assets/styles/components/attractions-city/attractions-city-hero.scss
@@ -1,9 +1,15 @@
 .attractions-city-hero {
   @include max-screen(tablet) {
     padding-bottom: 40px;
+    display: none;
   }
   @include min-screen(tablet-2x) {
     padding-bottom: 60px;
+    display: block;
+  }
+
+  &__wrapper {
+    position: relative;
   }
 
   &__title {
@@ -31,6 +37,46 @@
       margin-top: 30px;
       font-size: 18px;
       line-height: 24px;
+    }
+  }
+
+  &__share {
+    position: absolute;
+    z-index: 3;
+    top: -40px;
+    right: 0;
+    align-items: center;
+    gap: 12px;
+    &:active {
+      span {
+        border-color: rgba($color: $gray-400, $alpha: 0.5);
+      }
+    }
+    @include max-screen(tablet) {
+      display: none;
+    }
+    @include min-screen(tablet-2x) {
+      display: flex;
+    }
+    @include min-screen(laptop) {
+      &:hover {
+        span {
+          border-color: rgba($color: $gray-400, $alpha: 0.5);
+        }
+      }
+    }
+    span {
+      font-size: 16px;
+      font-weight: 400;
+      line-height: 18px;
+      color: $gray-400;
+      border-bottom: 1px dashed transparent;
+      @include min-screen(laptop) {
+        transition: border-color $transition-default;
+      }
+    }
+    svg {
+      fill: transparent;
     }
   }
 }
