--- a/src/assets/styles/components/attractions-city/attractions-city-hotel.scss
+++ b/src/assets/styles/components/attractions-city/attractions-city-hotel.scss
@@ -1,5 +1,10 @@
 .attractions-city-hotel {
-  margin: 60px 0;
+  @include max-screen(tablet) {
+    margin: 50px 0;
+  }
+  @include min-screen(tablet-2x) {
+    margin: 60px 0;
+  }
 
   &__title {
     display: flex;
@@ -30,22 +35,39 @@
   }
 
   &__items {
-    margin-top: 30px;
     display: flex;
     flex-wrap: wrap;
-    gap: 10px;
+    @include max-screen(tablet) {
+      margin-top: 20px;
+      gap: 8px;
+    }
+    @include min-screen(tablet-2x) {
+      margin-top: 30px;
+      gap: 10px;
+    }
   }
 
   &__item {
-    padding: 7px 12px;
     background-color: rgba($color: $orange-500, $alpha: 0.15);
     color: $blue-500;
-    font-size: 16px;
-    font-weight: 600;
-    line-height: 16px;
+    
     border-radius: 4px;
     &:active {
       color: $black-400;
+    }
+    @include max-screen(tablet) {
+      font-size: 14px;
+      font-weight: 700;
+      line-height: 16px;
+      padding: 10px 12px;
+
+    }
+    @include min-screen(tablet-2x) {
+      font-size: 16px;
+      font-weight: 600;
+      line-height: 16px;
+      padding: 7px 12px;
+
     }
     @include min-screen(laptop) {
       &:hover {
