--- a/src/views/components/attractions-city/attractions-city-about.pug
+++ b/src/views/components/attractions-city/attractions-city-about.pug
@@ -1,22 +1,49 @@
 section.attractions-city-about
+  .attractions-city-about__container
+    button.attractions-city-about__share(type="button")
+      svg(width="18" height="18" viewBox="0 0 18 18")
+        use(xlink:href="#svg-share-up")
   .attractions-city-about__wrapper
     .attractions-city-about__img
       img(src="/assets/images/attractions/theater.png" alt="theater" loading="lazy")
+    .attractions-city-about__header
+      h1.attractions-city-about__title Рязанский областной театр драмы
+      p.attractions-city-about__text Рязанский областной театр драмы (Рязань, Россия) — фото и видео, описания и время работы, расположение, объекты размещения рядом.
+    button.attractions-city-about__button.attractions-button--open(type="button")
+      .attractions-city-about__left
+        svg(width="20" height="20" viewBox="0 0 20 20")
+          use(xlink:href="#svg-list")
+        span Содержание
+      svg(width="16" height="16" viewBox="0 0 16 16")
+        use(xlink:href="#svg-chevron-right")
+
+    .attractions-sidebar__block.attractions-sidebar__block--orange
+      .attractions-sidebar__title
+        svg(width="18" height="18" viewBox="0 0 18 18")
+          use(xlink:href="#svg-direction")
+        h4 Экскурсии
+      .attractions-sidebar__types
+        .attractions-sidebar__type
+          span По достопримечательности:
+          a(href="#") 58 экскурсий
+        .attractions-sidebar__type
+          span По городу:
+          a(href="#") 4 экскурсии
+
     .attractions-city-about__block
       .attractions-city-about__item
-        .attractions-city-about__title Рабочее время:
+        .attractions-city-about__name Рабочее время:
         ul.attractions-city-about__list
           li Пн-пт: с 10:00 до 19:00.
           li Сб-вс и праздничные дни: с 11:00 до 18:00.
       .attractions-city-about__item
-        .attractions-city-about__title Стоимость:
+        .attractions-city-about__name Стоимость:
         ul.attractions-city-about__list
           li Премьеры — от 450 до 900 руб.
           li Вечерние спектакли — от 350 до 800 руб.
           li Детские — от 250 до 400 руб.
           li Малая сцена — 500 руб.
-    .attractions-city-about__content
-      .attractions-content
-        p Большой театр - это один из самых знаменитых и уважаемых театров в мире, расположенный в центре Москвы, на Театральной площади. Он был открыт в 1825 году после пожара, который уничтожил предыдущий театр на этой территории. С тех пор он стал одним из главных культурных центров России и всего мира.
-        p Архитектура Большого театра является уникальным примером классицизма. Здание театра было спроектировано архитектором Осипом Бове и строилось в течение девяти лет. Фасад театра украшен шестью коринфскими колоннами, которые поддерживают фронтон с барельефами, изображающими аллегории искусств: музыки, танца, трагедии и комедии.
-        p Внутри театра есть два зала: основной зал на 1736 мест и камерный зал на 400 мест. Основной зал украшен роскошными люстрами, позолоченными лепнинами и красным бархатом. Каждый год здесь проходит более 200 спектаклей, включая оперы, балеты и концерты.
+    .attractions-city-content__text
+      p Большой театр - это один из самых знаменитых и уважаемых театров в мире, расположенный в центре Москвы, на Театральной площади. Он был открыт в 1825 году после пожара, который уничтожил предыдущий театр на этой территории. С тех пор он стал одним из главных культурных центров России и всего мира.
+      p Архитектура Большого театра является уникальным примером классицизма. Здание театра было спроектировано архитектором Осипом Бове и строилось в течение девяти лет. Фасад театра украшен шестью коринфскими колоннами, которые поддерживают фронтон с барельефами, изображающими аллегории искусств: музыки, танца, трагедии и комедии.
+      p Внутри театра есть два зала: основной зал на 1736 мест и камерный зал на 400 мест. Основной зал украшен роскошными люстрами, позолоченными лепнинами и красным бархатом. Каждый год здесь проходит более 200 спектаклей, включая оперы, балеты и концерты.
