--- a/src/views/components/attractions/attractions-sidebar.pug
+++ b/src/views/components/attractions/attractions-sidebar.pug
@@ -2,7 +2,7 @@ aside.attractions-sidebar__block.attractions-sidebar__block--orange
   .attractions-sidebar__title
     svg(width="18" height="18" viewBox="0 0 18 18")
       use(xlink:href="#svg-direction")
-    h3 Экскурсии
+    h4 Экскурсии
   .attractions-sidebar__types
     .attractions-sidebar__type
       span По достопримечательности:
@@ -10,9 +10,13 @@ aside.attractions-sidebar__block.attractions-sidebar__block--orange
     .attractions-sidebar__type
       span По городу:
       a(href="#") 4 экскурсии
-aside.attractions-sidebar__block
-  h4 Содержание:
-  .attractions-sidebar__main
+aside.attractions-sidebar__block.attractions-sidebar__block--default
+  .attractions-sidebar__header
+    h5 Содержание:
+    button.attractions-sidebar__close(type="button")
+      svg(width="24" height="24" viewBox="0 0 24 24")
+        use(xlink:href="#svg-close")
+  .attractions-sidebar__main(data-scroll-lock-scrollable)
       .attractions-sidebar__links
         a.attractions-sidebar__link.attractions-sidebar__link--bold(href="#") История
         a.attractions-sidebar__link(href="#") Пожары и новые строительства
