--- a/src/views/components/attractions/attractions-information.pug
+++ b/src/views/components/attractions/attractions-information.pug
@@ -7,31 +7,31 @@
       img(src="/assets/images/attractions/bg-mob.svg" alt="bg-links" loading="lazy")
   h2.attractions-information__title Посмотрите еще в <br> Краснодарском крае
   .attractions-information__links
-    a.attractions-information__link(href="#")
+    a.attractions-information__link.attractions-information__link--orange(href="#")
       svg(width="18" height="18" viewBox="0 0 18 18")
         use(xlink:href="#svg-water-default")
       span Санатории и пансионаты
-    a.attractions-information__link(href="#")
+    a.attractions-information__link.attractions-information__link--green(href="#")
       svg(width="18" height="18" viewBox="0 0 18 18")
         use(xlink:href="#svg-bed-default")
       span Отели и гостиницы
-    a.attractions-information__link(href="#")
+    a.attractions-information__link.attractions-information__link--blue(href="#")
       svg(width="18" height="18" viewBox="0 0 18 18")
         use(xlink:href="#svg-building-default")
       span Апартаменты и квартиры посуточно
-    a.attractions-information__link(href="#")
+    a.attractions-information__link.attractions-information__link--orange(href="#")
       svg(width="18" height="18" viewBox="0 0 18 18")
         use(xlink:href="#svg-house-default")
       span Базы отдыха
-    a.attractions-information__link(href="#")
+    a.attractions-information__link.attractions-information__link--green(href="#")
       svg(width="18" height="18" viewBox="0 0 18 18")
         use(xlink:href="#svg-shape-default")
       span Кемпинги и глэмпинги
-    a.attractions-information__link(href="#")
+    a.attractions-information__link.attractions-information__link--blue(href="#")
       svg(width="18" height="18" viewBox="0 0 18 18")
         use(xlink:href="#svg-direction-default")
       span Экскурсии с гидом
-    a.attractions-information__link(href="#")
+    a.attractions-information__link.attractions-information__link--orange(href="#")
       svg(width="18" height="18" viewBox="0 0 18 18")
         use(xlink:href="#svg-car-default")
       span Трансферы/такси
