add how-to-book page

--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -72,3 +72,7 @@
 @import "./components/attractions-city/attractions-city-content";
 @import "./components/attractions-city/attractions-city-hotel";
 @import "./components/attractions-city/attractions-city-types";
+
+@import "./components/how-to-book/how-to-book-hero";
+@import "./components/how-to-book/how-to-book-types";
+@import "./components/how-to-book/how-to-book-questions";
