--- a/src/assets/styles/base/global.scss
+++ b/src/assets/styles/base/global.scss
@@ -100,7 +100,6 @@ svg {
   margin: 0 auto;
   width: 100%;
   padding: 0 #{$container-padding};
-  max-width: calc(#{$mobile-wrapper} + #{$container-padding * 2});
   @include min-screen(tablet) {
     max-width: calc(#{$screen-tablet} + #{$container-padding * 2});
   }
@@ -134,9 +133,8 @@ svg {
 .inner-wrapper {
   margin: 0 auto;
   width: 100%;
-  @include max-screen(mobile) {
-    max-width: calc(#{$mobile-wrapper} + #{$container-padding * 2});
-  }
+  // @include max-screen(mobile) {
+  // }
   @include mm-screen(tablet) {
     max-width: calc(#{$screen-tablet} + #{$container-padding * 2});
   }
