--- a/src/assets/styles/mixins/attractions-types-card.scss
+++ b/src/assets/styles/mixins/attractions-types-card.scss
@@ -17,7 +17,8 @@
     }
     img {
       height: 100%;
-      width: auto;
+      width: 100%;
+      object-fit: cover;
     }
   }
 
@@ -124,6 +125,7 @@
 
   &__buttons {
     display: flex;
+    flex-wrap: wrap;
     gap: 10px;
     @include max-screen(tablet) {
       margin-top: 20px;
@@ -138,7 +140,7 @@
     align-items: center;
     justify-content: center;
     gap: 6px;
-    width: 100%;
+    flex-grow: 1;
     border-radius: 6px;
     @include max-screen(tablet) {
       padding: 9px 20px;
