--- a/src/assets/styles/components/attractions/attractions-sidebar.scss
+++ b/src/assets/styles/components/attractions/attractions-sidebar.scss
@@ -1,6 +1,5 @@
 .attractions-sidebar {
   &__block {
-    position: sticky;
     top: 20px;
     background-color: $white;
     border-radius: 10px;
@@ -25,6 +24,7 @@
       }
     }
     &--default {
+      position: sticky;
       @include max-screen(tablet-2x) {
         display: block;
         width: 300px;
@@ -40,6 +40,22 @@
       }
       &.active {
         transform: translateX(0);
+      }
+    }
+    &--verified {
+      padding: 20px;
+      display: grid;
+      justify-content: start;
+      align-items: center;
+      column-gap: 16px;
+      @include max-screen(tablet-2x) {
+        margin-top: 20px;
+      }
+      @include min-screen(laptop) {
+        row-gap: 20px;
+      }
+      @include min-screen(desktop) {
+        padding: 24px;
       }
     }
     h4 {
@@ -61,6 +77,112 @@
       font-weight: 700;
       line-height: 24px;
       color: $gray-400;
+    }
+  }
+
+  &__top {
+    display: flex;
+    align-items: center;
+    @include max-screen(tablet-2x) {
+      grid-column: 2 / span 1;
+      gap: 6px;
+    }
+    @include min-screen(laptop) {
+      gap: 10px;
+      grid-column: 1 / span 7;
+
+      padding-bottom: 16px;
+      border-bottom: 2px dashed rgba($color: $green-400, $alpha: 0.25);
+    }
+    svg {
+      stroke: transparent;
+      fill: transparent;
+      @include max-screen(tablet-2x) {
+        width: 18px;
+        height: 18px;
+      }
+    }
+    span {
+      font-weight: 600;
+      color: $green-300;
+      @include max-screen(tablet-2x) {
+        font-size: 14px;
+        line-height: 18px;
+      }
+      @include min-screen(laptop) {
+        font-size: 16px;
+        line-height: 20px;
+      }
+    }
+  }
+
+  // &__bottom {
+  //   padding-top: 20px;
+  //   display: flex;
+  //   gap: 16px;
+  // }
+
+  &__photo {
+    border-radius: 100px;
+    overflow: hidden;
+    @include max-screen(tablet-2x) {
+      grid-column: 1 / span 1;
+      grid-row: 1 / span 2;
+      min-width: 60px;
+      min-height: 60px;
+      width: 60px;
+      height: 60px;
+    }
+    @include min-screen(laptop) {
+      grid-row: 2 / span 1;
+      grid-column: 1 / span 1;
+      width: 50px;
+      height: 50px;
+      min-width: 50px;
+      min-height: 50px;
+    }
+    img {
+      object-fit: cover;
+      height: 100%;
+      width: 100%;
+    }
+  }
+
+  &__content {
+    display: flex;
+    flex-direction: column;
+    gap: 2px;
+    @include max-screen(tablet-2x) {
+      grid-column: 2 / span 1;
+      margin-top: 6px;
+    }
+    @include min-screen(laptop) {
+      grid-row: 2 / span 1;
+      grid-column: 2 / span 4;
+      gap: 6px;
+    }
+    a {
+      font-size: 16px;
+      font-weight: 700;
+      line-height: 18px;
+      text-align: left;
+      color: $blue-500;
+      max-width: max-content;
+      &:active {
+        color: $orange-500;
+      }
+      @include min-screen(laptop) {
+        transition: color $transition-default;
+        &:hover {
+          color: $orange-500;
+        }
+      }
+    }
+    span {
+      font-size: 14px;
+      font-weight: 400;
+      line-height: 16px;
+      color: rgba($color: $black-300, $alpha: 0.75);
     }
   }
 
