--- a/src/assets/styles/components/main/main-faq.scss
+++ b/src/assets/styles/components/main/main-faq.scss
@@ -42,30 +42,6 @@
       padding: 0;
       box-shadow: 0px 5px 10px 0px $box-shadow-one;
     }
-    &:before {
-      position: absolute;
-      content: '';
-      top: 0;
-      bottom: 0;
-      width: 100%;
-      height: 100%;
-      left: -100%;
-      @include min-screen(tablet-2x) {
-        display: none;
-      }
-    }
-    &:after {
-      position: absolute;
-      content: '';
-      top: 0;
-      bottom: 0;
-      width: 100%;
-      height: 100%;
-      right: -100%;
-      @include min-screen(tablet-2x) {
-        display: none;
-      }
-    }
     & > a {
       inset: 0;
       z-index: 1;
@@ -80,26 +56,14 @@
       @include max-screen(tablet) {
         background-color: $cyan-400;
       }
-      &:before,
-      &:after {
-        background-color: $cyan-400;
-      }
     }
     &--blue {
       @include max-screen(tablet) {
         background-color: $blue-400;
       }
-      &:before,
-      &:after {
-        background-color: $blue-400;
-      }
     }
     &--green {
       @include max-screen(tablet) {
-        background-color: $green-400;
-      }
-      &:before,
-      &:after {
         background-color: $green-400;
       }
     }
@@ -127,10 +91,10 @@
   h3 {
     font-weight: 700;
     text-align: left;
-    @include max-screen(mobile) {
+    @include max-screen(mobile-2x) {
       max-width: 224px;
     }
-    @include min-screen(tablet) {
+    @include min-screen(mobile) {
       max-width: 500px;
     }
     @include mm-screen(tablet) {
