--- a/src/assets/styles/mixins/button-transparent.scss
+++ b/src/assets/styles/mixins/button-transparent.scss
@@ -1,22 +1,17 @@
 .button-transparent {
-  width: 100%;
   border: 1px solid $blue-border;
   display: flex;
-  padding: 11px;
   justify-content: center;
   border-radius: 8px;
-  @include min-screen(tablet) {
+  @include max-screen(mobile-2x) {
+    padding: 11px;
+    width: 100%;
+  }
+  @include min-screen(mobile) {
     padding: 11px 86px;
     max-width: max-content;
   }
   @include min-screen(laptop) {
-    &:hover {
-      span {
-        color: $orange-500;
-      }
-    }
-  }
-  @include min-screen(desktop) {
     &:hover {
       span {
         color: $orange-500;
