--- a/src/views/components/attractions-city/attractions-city-about.pug
+++ b/src/views/components/attractions-city/attractions-city-about.pug
@@ -1,8 +1,4 @@
 section.attractions-city-about
-  .attractions-city-about__container
-    button.attractions-city-about__share(type="button")
-      svg(width="18" height="18" viewBox="0 0 18 18")
-        use(xlink:href="#svg-share-up")
   .attractions-city-about__wrapper
     .attractions-city-about__img
       img(src="/assets/images/attractions/theater.png" alt="theater" loading="lazy")
@@ -17,18 +13,8 @@ section.attractions-city-about
       svg(width="16" height="16" viewBox="0 0 16 16")
         use(xlink:href="#svg-chevron-right")
 
-    .attractions-sidebar__block.attractions-sidebar__block--orange
-      .attractions-sidebar__title
-        svg(width="18" height="18" viewBox="0 0 18 18")
-          use(xlink:href="#svg-direction")
-        h4 Экскурсии
-      .attractions-sidebar__types
-        .attractions-sidebar__type
-          span По достопримечательности:
-          a(href="#") 58 экскурсий
-        .attractions-sidebar__type
-          span По городу:
-          a(href="#") 4 экскурсии
+    include ../attractions/attractions-sidebar-orange
+    include ../attractions/attractions-sidebar-verified
 
     .attractions-city-about__block
       .attractions-city-about__item
