--- a/src/views/components/icons.pug
+++ b/src/views/components/icons.pug
@@ -260,3 +260,9 @@ svg(style="display: none")
 
   symbol#svg-share-up
     <path d="M15.75 9V12.15C15.75 13.4101 15.75 14.0402 15.5048 14.5215C15.289 14.9448 14.9448 15.289 14.5215 15.5048C14.0402 15.75 13.4101 15.75 12.15 15.75H5.85C4.58988 15.75 3.95982 15.75 3.47852 15.5048C3.05516 15.289 2.71095 14.9448 2.49524 14.5215C2.25 14.0402 2.25 13.4101 2.25 12.15V9M12 5.25L9 2.25M9 2.25L6 5.25M9 2.25V11.25" stroke="#A1ABB9" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+
+  symbol#svg-check-double
+    <path d="M1.66699 10L6.04199 14.1667C6.04199 14.1667 7.22482 12.8148 8.22949 11.6667" stroke="#0BAB8B" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+    <path d="M6.66699 9.99998L11.042 14.1666L18.3337 5.83331" stroke="#0BAB8B" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+    <path d="M13.3337 5.83331L10.417 9.16665" stroke="#0BAB8B" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+
